--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -158,5 +158,34 @@
 
             </div>
         </section> 
+        
+        // Practica #4
+        
+        <section th:fragment="practicaFiltro" class="bg-light">
+            <div class="row py-2">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <form method="POST" th:action="@{/pruebas/consulta1}" 
+                          class="was-validated">
+                        <div class="card">                            
+                            <div class="card-body">
+                                <div class="mb-9">
+                                    <label for="existencia">Existencia</label>
+                                    <input type="number" class="form-control" 
+                                           th:value="${existencia}"
+                                           th:name="existencia" required="true"/>
+                                </div>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fas fa-check"></i> Buscar
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>   
+            </div>
+        </section> 
+        
     </body>
 </html>
